--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ h1 {
   margin-bottom: 4.8rem;
 }
 
+.btn__search:hover {
+  cursor: pointer;
+}
+
 /* ************ */
 article {
   display: flex;
